# pyrangeyes

./: README.md  setup.cfg  setup.py
.github/workflows/: continuous_integration.yml
docs/: conf.py  index.rst  installation.rst  prp_options.rst  prp_plot.rst  prp_registerplot.rst  prp_scatter.rst  prp_settings.rst  prp_vcf.rst  requirements.txt  tutorial.rst
examples/: make_cheatsheet_genomic_ops.py  make_cheatsheet_mapping.py  make_cheatsheet_overlap.py  options_fig.py  pr_fig_4.py  pr_figs_1_2.py  time_test.py
src/pyrangeyes/: core.py  data_preparation.py  example_data.py  introns_off.py  make_subsets.py  plot_features.py  plot_main.py  pr_register_plot.py
src/pyrangeyes/matplotlib_base/: core.py  data2plot.py  fig_axes.py  plot_exons_plt.py
src/pyrangeyes/plotly_base/: core.py  data2plot.py  fig_axes.py  plot_exons_ply.py
src/pyrangeyes/vcf/: vcf_preparation.py  vcf_reader.py
tests/: test_mpl.py  test_ply.py
tests/baseline_ply/: test06.json  test08.json  test09.json  test11.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test20.json  test21.json
