[metadata]
name = pyrangeyes
version = attr: pyrangeyes._version.__version__
author = Ester Muñoz del Campo, Max Ticó, Marco Mariotti
author_email = ester.munoz01@estudiant.upf.edu, max.tico@ub.edu, marco.mariotti@ub.edu
description = 'Genomic intervals data visualization package for dataframe objects generated with PyRanges.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyranges/pyrangeyes
project_urls =
https://github.com/pyranges/pyrangeyes
    Documentation=https://pyranges1.readthedocs.io/
    Github Website=https://github.com/pyranges/pyrangeyes

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    pyranges1 >= 1.1.0
    intervaltree >= 3.1.0
    deepdiff
    numpy >= 2.1
    pandas >= 2.0
    ipywidgets >= 8.0

[options.extras_require]
matplotlib =
    matplotlib >= 3.7.2
    mplcursors >= 0.5.2
plotly =
    plotly >= 5.9.0
    dash >= 2.14.0
    dash_bootstrap_components >= 1.5.0
docs =
    sphinx >= 7.3.7
    sphinx_rtd_theme >= 2.0.0
    sphinx-autoapi >= 3.1.1
    sphinxcontrib-napoleon >= 0.7
    memory-profiler >= 0.61.0
all =
    matplotlib >= 3.7.2
    mplcursors >= 0.5.2
    plotly >= 5.9.0
    dash >= 2.14.0
    dash_bootstrap_components >= 1.5.0
    sphinx >= 7.3.7
    sphinx_rtd_theme >= 2.0.0
    sphinx-autoapi >= 3.1.1
    sphinxcontrib-napoleon >= 0.7
    memory-profiler >= 0.61.0
    ipywidgets >= 8.0

[options.packages.find]
where = src

[tool.ruff]
max-line-length = 120